# ORAM

./: .gitignore  .pre-commit-config.yaml  README.md  client.py  main.py  pyproject.toml  server.py
.github/workflows/: ci.yaml
src/: benchmark.py  client.py  server.py
tests/: test_client.py  test_code.py  test_server.py  tests.py
