[project]
name = "oram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.2",
    "matplotlib>=3.10.3",
    "pydantic>=2.11.4",
    "ruff>=0.11.9",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
